# screaper

./: .ebignore  .gitignore  Cargo.toml  Dockerfile  Procfile  README.md  requirements.txt  setup.md  team_tasks.md  workflow.md
.ebextensions/: 01_packages.config
.elasticbeanstalk/: config.yml
data/: sites_to_scrape.txt
data/proxy/: update_proxies.sh
data/queue/: data.db
data/research/: useful.txt
kubernetes/: Dockerfile  build_and_run_docker.sh  upload_to_cluster.sh
kubernetes/scraper/: Dockerfile
kubernetes/scraper_language_model/: Dockerfile  requirements.txt
migrations/20201211_migration_normalize_db/: main.py  migration.sql
migrations/20210105_migration_add_depth/: main.py
migrations/20210110_migration_add_occurrences_on_adjacency_matrix/: main.py
notebooks/notebook_20201128_initial_scraping/: main.py
notebooks/notebooks_20201205_process_downloaded_html/: main.py
notebooks/notebooks_20201215_baidu/: main.py
notebooks/notebooks_20201221_ner_playground/: main.py
notebooks/notebooks_20201223_popular_websites/: main.py  popular_websites.yaml
notebooks/notebooks_20201223_reassign_priorities/: main.py
screaper/: run.py  run.sh
screaper-data/: Cargo.toml  refinery.toml
screaper-data/migrations/: V1__init.sql
screaper-data/src/: lib.rs  markup.rs  schema.rs  url.rs  url_referral.rs
screaper-worker/: Cargo.toml
screaper-worker/src/: main.rs
screaper-worker/src/commands/: mod.rs  run.rs  seed.rs
screaper/core/: __init__.py  main.py  (+1 more)
screaper_backend/: .gitignore  Dockerfile  mockups_companies.yaml  mockups_order.yaml  mockups_products.yaml  requirements.txt  run.py  to_heroku.sh
screaper_language_model/: run.py
scripts/: export_db.sh  run.py
(+87 files in other folders)
