[package]
name = "screaper-data"
version = "0.1.0"
authors = ["Sven Knobloch <sven@knobo.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.5", features = ["postgres", "chrono"] }
chrono = "0.4"

