[package]
name = "screaper-worker"
version = "0.1.0"
authors = ["Sven Knobloch <sven@knobo.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "^2.33"
regex = "~1.4"
tokio = { version = "^1.0", features = ["full"] }
futures = "~0.3"
reqwest = { version = "~0.11", features = ["json", "socks"] }
deadpool = "~0.7"
serde = "~1.0"
serde_json = "~1.0"
async-trait = "~0.1"
rand = "~0.8"

screaper-data = { path = "../screaper-data" }

[[bin]]
name = "screaper"
path = "src/main.rs"
